feat: US-006 - Optimize EventRepositoryDataJdbcAdapter.findAll()